feat: add version endpoint
